--- a/datasets/lemat-rho.yaml
+++ b/datasets/lemat-rho.yaml
@@ -1,37 +1,56 @@
-Name:
-Description:
-Documentation:
-Contact:
-ManagedBy:
-UpdateFrequency:
+Name: LeMat-Rho
+Description: Charge densities and other raw VASP files from density functional theory calculations of equilibrium materials in LeMat-Bulk and non-equilibrium materials from MAD dataset.
+Documentation: https://github.com/LeMaterial/LeMat-Rho/tree/main/docs
+Contact: contact@entalpic.ai
+ManagedBy: "[LeMaterial](http://lematerial.org)"
+UpdateFrequency: Continuously, as calculated
 Tags:
-  -
-License:
-Citation:
-Resources:
-  - Description:
+  - chemistry
+  - materials science
+  - machine learning
+  - physics
+  - crystallography
+  - density functional theory
+License: BY CC 4.0
+Citation: 
+Resources: Raw Data 
+  - Description: Raw, gzipped VASP calculations for all materials calculated
     ARN:
     Region:
-    Type:
+    Type: S3 Bucket
     Explore:
 DataAtWork:
-  Tutorials:
-    - Title:
+  Tutorials: 
+    - Title: 
       URL:
       NotebookURL:
       AuthorName:
       AuthorURL:
       Services:
   Tools & Applications:
-    - Title:
-      URL:
-      AuthorName:
-      AuthorURL:
+  - Title: Pymatgen
+      URL: https://pymatgen.org
+      AuthorName: Materials Project
+      AuthorURL: https://materialsproject.org
+    - Title: Atomate2
+      URL: https://materialsproject.github.io/atomate2
+      AuthorName: Materials Project
+      AuthorURL: https://materialsproject.org
+    - Title: FireWorks
+      URL: https://materialsproject.github.io/fireworks
+      AuthorName: Materials Project
+      AuthorURL: https://materialsproject.org
+    - Title: MP-PyRho
+      URL: https://github.com/materialsproject/pyrho
+      AuthorName: MaterialsProject
+      AuthorURL: https://materialsproject.org
   Publications:
     - Title:
       URL:
       AuthorName:
       AuthorURL:
-DeprecatedNotice:
 ADXCategories:
-  -    
+  - Education
+  - Public Sector & Government
+  - Technology
+  - Manufacturing   
