--- a/datasets/lemat-rho.yaml
+++ b/datasets/lemat-rho.yaml
@@ -1,7 +1,7 @@
 Name: LeMat-Rho
 Description: Charge densities and other raw VASP files from density functional theory calculations of equilibrium materials in LeMat-Bulk and non-equilibrium materials from MAD dataset.
 Documentation: https://github.com/LeMaterial/LeMat-Rho/tree/main/docs
-Contact: contact@entalpic.ai
+Contact: info@entalpic.ai
 ManagedBy: "[LeMaterial](http://lematerial.org)"
 UpdateFrequency: Continuously, as calculated
 Tags:
@@ -21,12 +21,10 @@ Resources: Raw Data
     Explore:
 DataAtWork:
   Tutorials: 
-    - Title: 
-      URL:
-      NotebookURL:
-      AuthorName:
-      AuthorURL:
-      Services:
+    - Title: Accessing Data in LeMat-Rho AWS OpenData Repository 
+      URL: https://github.com/LeMaterial/LeMat-Rho/blob/feat/aws-upload/scripts/aws-open-data.ipynb
+      NotebookURL: https://github.com/LeMaterial/LeMat-Rho/blob/feat/aws-upload/scripts/aws-open-data.ipynb
+      AuthorName: Martin Siron, Mathilde Franckel, Jonathan Schmidt
   Tools & Applications:
   - Title: Pymatgen
       URL: https://pymatgen.org
