--- a/datasets/dendritic-consortium.yaml
+++ b/datasets/dendritic-consortium.yaml
@@ -19,13 +19,13 @@ Tags:
   - single neuron models
 License: There are no restrictions on the use of this data.
 Resources:
-  - Description: Multimodal dataset from Baz1a pyramidal neurons in mouse V1 and endodermal neurons in Hydra vulgaris. Includes TIFF, ABF, MAT, CSV, PNG, PY, HOC, and SWC files.
+  - Description: "Multimodal dataset from Baz1a pyramidal neurons in mouse V1 and endodermal neurons in Hydra vulgaris, including TIFF, ABF, MAT, CSV, PNG, PY, HOC, and SWC files."
     ARN: arn:aws:s3:::dendritic-consortium
     Region: us-east-2
     Type: S3 Bucket
 DataAtWork:
   Tutorials:
-    - Title: Tutorial: Download and Visualize Data from the Dendritic Consortium Dataset
+    - Title: Download and Visualize Data from the Dendritic Consortium Dataset
       URL: https://github.com/jpcastanoo/aws-open-data-dendritic-consortium/tree/main/tutorials
       AuthorName: Dendritic Consortium
       AuthorURL: https://github.com/jpcastanoo/aws-open-data-dendritic-consortium
