--- a/datasets/dendritic-consortium.yaml
+++ b/datasets/dendritic-consortium.yaml
@@ -10,6 +10,7 @@ Tags:
   - electrophysiology
   - electron microscopy
   - imaging
+  - life sciences
   - Mus musculus
   - neuroscience
   - neurobiology
