Patch text to reflect QR only

--- a/datasets/spherex-qr.yaml
+++ b/datasets/spherex-qr.yaml
@@ -1,9 +1,9 @@
-Name: 'SPHEREx: An All-Sky Spectral Survey'
-Description: 'The Spectro-Photometer for the History of the Universe, Epoch of Reionization, and Ices Explorer (SPHEREx) is a NASA Astrophysics Medium-class Explorer (MIDEX) mission launched in March 2025. During its planned two-year mission, SPHEREx will perform the first ever all-sky spectral survey in the optical to near-infrared (0.75-5 microns). SPHEREx data will be used to probe inflation and the early universe, trace the history of galactic light production, and investigate the origin of planetary systems and biogenic ices, in addition to contributing to many other astrophyics research topics.'
+Name: 'SPHEREx Quick Release (QR): An All-Sky Spectral Survey'
+Description: 'The Spectro-Photometer for the History of the Universe, Epoch of Reionization, and Ices Explorer (SPHEREx) is a NASA Astrophysics Medium-class Explorer (MIDEX) mission launched in March 2025. During its planned two-year mission, SPHEREx will perform the first ever all-sky spectral survey in the optical to near-infrared (0.75-5 microns). SPHEREx Quick Release (QR) is the first data release. SPHEREx data will be used to probe inflation and the early universe, trace the history of galactic light production, and investigate the origin of planetary systems and biogenic ices, in addition to contributing to many other astrophysics research topics.'
 Documentation: https://irsa.ipac.caltech.edu/Missions/spherex.html
 Contact: https://irsa.ipac.caltech.edu/docs/help_desk.html
 ManagedBy: "NASA/IPAC Infrared Science Archive ([IRSA](https://irsa.ipac.caltech.edu)) at Caltech"
-UpdateFrequency: The SPHEREx mission releases small updates weekly and large updates annually. The data may also be presented in new ways as the products become available.
+UpdateFrequency: SPHEREx QR is updated weekly. The data may also be presented in new ways as the products become available.
 Tags:
   - astronomy
   - imaging
