Fix invalid tags in Clay datasets - remove aws-pds and invalid tags

--- a/datasets/clay-model-v0-embeddings.yaml
+++ b/datasets/clay-model-v0-embeddings.yaml
@@ -5,14 +5,12 @@ Contact: contact@madewithclay.org
 ManagedBy: "[Source Cooperative](https://source.coop/)"
 UpdateFrequency: As new model versions become available
 Tags:
-  - aws-pds
   - machine learning
-  - embeddings
   - computer vision
   - satellite imagery
   - aerial imagery
-  - feature extraction
-  - ai
+  - earth observation
+  - imaging
 License: Creative Commons Attribution 4.0 International License
 Citation: "Clay Model v0 Embeddings. Source Cooperative. https://source.coop/repositories/clay/clay-model-v0-embeddings/description"
 Resources:
