--- a/datasets/clay-v1-5-naip-2.yaml
+++ b/datasets/clay-v1-5-naip-2.yaml
@@ -5,13 +5,10 @@ Contact: contact@madewithclay.org
 ManagedBy: "[Source Cooperative](https://source.coop/)"
 UpdateFrequency: As new NAIP data becomes available
 Tags:
-  - aws-pds
   - aerial imagery
-  - naip
   - agriculture
   - land use
-  - natural resources
-  - remote sensing
+  - natural resource
   - environmental
 License: Creative Commons Attribution 4.0 International License
 Citation: "Clay v1.5 NAIP-2. Source Cooperative. https://source.coop/repositories/clay/clay-v1-5-naip-2/description"
