Fix invalid 'land monitoring' tag - replace with valid 'land use' tag

--- a/datasets/clay-v1-5-sentinel2.yaml
+++ b/datasets/clay-v1-5-sentinel2.yaml
@@ -8,7 +8,7 @@ Tags:
   - satellite imagery
   - earth observation
   - agriculture
-  - land monitoring
+  - land use
   - environmental
 License: Creative Commons Attribution 4.0 International License
 Citation: "Clay v1.5 Sentinel-2. Source Cooperative. https://source.coop/repositories/clay/clay-v1-5-sentinel2/description"
