Fix invalid ADX categories - use only valid categories from adx_categories.yaml

--- a/datasets/clay-model-v0-embeddings.yaml
+++ b/datasets/clay-model-v0-embeddings.yaml
@@ -21,5 +21,4 @@ Resources:
     Explore:
     - '[Browse Dataset](https://source.coop/clay/clay-model-v0-embeddings/)'
 ADXCategories:
-  - Machine Learning Data
-  - Computer Vision Data 
+  - Environmental Data 
