--- a/datasets/clay-v1-5-naip-2.yaml
+++ b/datasets/clay-v1-5-naip-2.yaml
@@ -20,5 +20,4 @@ Resources:
     Explore:
     - '[Browse Dataset](https://source.coop/clay/clay-v1-5-naip-2/)'
 ADXCategories:
-  - Earth Observation Data
-  - Aerial Imagery 
+  - Environmental Data 
