--- a/datasets/clay-v1-5-sentinel2.yaml
+++ b/datasets/clay-v1-5-sentinel2.yaml
@@ -20,7 +20,6 @@ Resources:
     Explore:
     - '[Browse Dataset](https://source.coop/repositories/clay/clay-v1-5-sentinel2/description)'
 ADXCategories:
-  - Earth Observation Data
-  - Satellite Imagery 
+  - Environmental Data 
 
 
