Added quotes to citation

--- a/datasets/mbers-open-data.yaml
+++ b/datasets/mbers-open-data.yaml
@@ -13,7 +13,7 @@ Tags:
   - energy modeling
   - environmental
 License: All data are free and provided without license restrictions.
-Citation: Marginal Build Emissions Rates (MBERs) for Electricity. Climate TRACE. [DATE]. URL: https://www.gem.wiki/MBERs
+Citation: "Marginal Build Emissions Rates (MBERs) for Electricity. Climate TRACE. [DATE]. URL: https://www.gem.wiki/MBERs"
 DataAtWork:
   Tutorials: 
     - Title: MBER Orientation and Tutorial
