--- a/datasets/dep-ls-geomads.yaml
+++ b/datasets/dep-ls-geomads.yaml
@@ -8,8 +8,8 @@ Documentation: https://digitalearthpacific.org/#/applications
 Contact: dep@spc.int
 ManagedBy: "[Pacific Community (SPC)](https://www.spc.int/)"
 UpdateFrequency: Annually
-Collab:
-    Name: ASDI
+Collabs:
+  ASDI:
     Tags:
     - satellite imagery
 Tags:
