adding asdi collab

--- a/datasets/vt-opendata.yaml
+++ b/datasets/vt-opendata.yaml
@@ -4,6 +4,10 @@ Documentation: https://vcgi.vermont.gov/data-and-programs/
 Contact: If you have specific questions please contact - vcgi@vermont.gov
 ManagedBy: "[Vermont Center for Geographic Information](https://vcgi.vermont.gov)"
 UpdateFrequency: Vermont acquires statewide imagery approximately once every other year. Lidar is acquired approximately once every 5-8 years. High-resolution landcover is generated once every other year.
+Collabs:
+  ASDI:
+    Tags:
+      - satellite imagery
 Tags:
   - earth observation
   - aerial imagery
