--- a/tags.yaml
+++ b/tags.yaml
@@ -452,3 +452,10 @@
 - x-ray tomography
 - xml
 - zarr
+- precipitation amount
+- precipitation type
+- wind speeds
+- cloud amount
+- visibility
+- ERA5
+- MPAS
