--- a/datasets/cache-dataset.yaml
+++ b/datasets/cache-dataset.yaml
@@ -5,7 +5,7 @@ Description: |
   The dataset can be used for cache research, storage performance evaluation, and workload modeling.
 Documentation: https://cachetrace.com/
 Contact: Juncheng Yang (juncheng@g.harvard.edu)
-ManagedBy: Harvard MADS Lab
+ManagedBy: HarvardSys Lab
 UpdateFrequency: New data are added as soon as they become available.
 Tags:
   - cache requests 
@@ -21,17 +21,17 @@ Resources:
 DataAtWork:
   Tutorials:
     - Title: How to use EC2 to run large scale cache simulations 
-      URL: 
-      AuthorName: Juncheng Yang
+      URL: https://github.com/cacheMon/cache_dataset
+      AuthorName: Juncheng Yang, Haocheng Xia
       Services: EC2, S3
   Tools & Applications:
     - Title: "libCacheSim: a high performance library for building cache simulator"
       URL: https://libcachesim.com/
-      AuthorName: Juncheng Yang
+      AuthorName: Juncheng Yang, Haocheng Xia
       AuthorURL: https://junchengyang.com/
     - Title: "DistComp: a distributed computation platform for running Python and Bash computation tasks on multiple nodes"
       URL: https://github.com/1a1a11a/distComp
-      AuthorName: Juncheng Yang
+      AuthorName: Juncheng Yang, Haocheng Xia
       AuthorURL: https://junchengyang.com/
   Publications:
     - Title: "A large scale analysis of hundreds of in-memory cache clusters at Twitter"
