--- a/tags.yaml
+++ b/tags.yaml
@@ -49,6 +49,7 @@
 - breast cancer
 - broadband
 - broadcast ephemeris
+- cache requests
 - Caenorhabditis elegans
 - calcium imaging
 - cancer
@@ -81,6 +82,7 @@
 - computed tomography
 - computer forensics
 - computer security
+- computer systems
 - computer vision
 - confidence intervals
 - conservation
@@ -334,6 +336,7 @@
 - pbi
 - pediatric
 - perception
+- performance
 - peril
 - pharmaceutical
 - physical
@@ -401,6 +404,7 @@
 - sqlite
 - stac
 - statistics
+- storage systems
 - STRIDES
 - structural biology
 - structural birth defect
