format Services section as a list in cache-dataset.yaml

--- a/datasets/cache-dataset.yaml
+++ b/datasets/cache-dataset.yaml
@@ -23,7 +23,9 @@ DataAtWork:
     - Title: How to use EC2 to run large scale cache simulations 
       URL: https://github.com/cacheMon/cache_dataset
       AuthorName: Juncheng Yang, Haocheng Xia
-      Services: EC2, S3
+      Services:
+        - EC2
+        - S3
   Tools & Applications:
     - Title: "libCacheSim: a high performance library for building cache simulator"
       URL: https://libcachesim.com/
