--- a/datasets/cache-dataset.yaml
+++ b/datasets/cache-dataset.yaml
@@ -4,7 +4,7 @@ Description: |
   The dataset contains block cache workloads, key-value cache workloads, and object cache workloads. 
   The dataset can be used for cache research, storage performance evaluation, and workload modeling.
 Documentation: https://cachetrace.com/
-Contact: Juncheng Yang (juncheng@g.harvard.edu)
+Contact: Juncheng Yang (juncheng@seas.harvard.edu)
 ManagedBy: HarvardSys Lab
 UpdateFrequency: New data are added as soon as they become available.
 Tags:
@@ -24,22 +24,19 @@ DataAtWork:
       URL: https://github.com/cacheMon/cache_dataset
       AuthorName: Juncheng Yang, Haocheng Xia
       Services:
-        - EC2
-        - S3
+        - Amazon EC2
+        - Amazon S3
   Tools & Applications:
     - Title: "libCacheSim: a high performance library for building cache simulator"
       URL: https://libcachesim.com/
       AuthorName: Juncheng Yang, Haocheng Xia
-      AuthorURL: https://junchengyang.com/
     - Title: "DistComp: a distributed computation platform for running Python and Bash computation tasks on multiple nodes"
       URL: https://github.com/1a1a11a/distComp
       AuthorName: Juncheng Yang, Haocheng Xia
-      AuthorURL: https://junchengyang.com/
   Publications:
     - Title: "A large scale analysis of hundreds of in-memory cache clusters at Twitter"
       URL: https://www.usenix.org/system/files/osdi20-yang.pdf
       AuthorName: Juncheng Yang, Yao Yue, K. V. Rashmi
-      AuthorURL: https://junchengyang.com/
     - Title: "FIFO queues are all you need for cache eviction"
       URL: https://dl.acm.org/doi/abs/10.1145/3600006.3613147
       AuthorName: Juncheng Yang, Yazhuo Zhang, Ziyue Qiu, Yao Yue, K. V. Rashmi
