Add Resources to mbers-open-data.yaml

--- a/datasets/mbers-open-data.yaml
+++ b/datasets/mbers-open-data.yaml
@@ -14,6 +14,11 @@ Tags:
   - environmental
 License: All data are free and provided without license restrictions.
 Citation: "Marginal Build Emissions Rates (MBERs) for Electricity. Climate TRACE. [DATE]. URL: https://www.gem.wiki/MBERs"
+Resources:
+  - Description: Marginal Build Emissions Rates (MBERs) for Electricity CSV Data
+    ARN: arn:aws:s3:::mbers-open-data
+    Region: us-west-2
+    Type: S3 Bucket
 DataAtWork:
   Tutorials: 
     - Title: MBER Orientation and Tutorial
