--- a/datasets/graf-reforecast.yaml
+++ b/datasets/graf-reforecast.yaml
@@ -21,7 +21,7 @@ Tags:
   - MPAS
   - zarr
   - weather
-License: "[CC BY-NC 4.0](https://creativecommons.org/licenses/by-nc/4.0/)"
+License: "[CC BY 4.0](https://creativecommons.org/licenses/by/4.0/)"
 Resources:
   - Description: GRAF Reforecast dataset
     ARN: arn:aws:s3:::twc-graf-reforecast
