--- a/datasets/graf-reforecast.yaml
+++ b/datasets/graf-reforecast.yaml
@@ -12,8 +12,7 @@ Tags:
   - model
   - near-surface air temperature
   - near-surface relative humidity
-  - precipitation amount
-  - precipitation type
+  - precipitation
   - wind speeds
   - cloud amount
   - visibility
