--- a/datasets/graf-reforecast.yaml
+++ b/datasets/graf-reforecast.yaml
@@ -26,6 +26,8 @@ Resources:
     ARN: arn:aws:s3:::twc-graf-reforecast
     Region: us-west-2
     Type: S3 Bucket
+    Explore:
+      - '[Browse Bucket](https://s3-us-west-2.amazonaws.com/twc-graf-reforecast/index.html)'
 DataAtWork:
   Publications:
     - Title: Global reforecasts from MPAS “GRAF” with mesh refinement over the US and Europe
