--- a/datasets/graf-reforecast.yaml
+++ b/datasets/graf-reforecast.yaml
@@ -4,6 +4,10 @@ Documentation: "[Documentation](https://docs.google.com/forms/d/e/1FAIpQLSejRyG2
 Contact: graf.reforecast@weather.com
 ManagedBy: "[The Weather Company](https://www.weathercompany.com/)"
 UpdateFrequency: One time push only
+Collabs:
+  ASDI:
+    Tags:
+      - weather
 Tags:
   - atmosphere
   - forecast
