bulk tagging ASDI - 25 files

--- a/datasets/aodn_vessel_air_sea_flux_product_delayed.yaml
+++ b/datasets/aodn_vessel_air_sea_flux_product_delayed.yaml
@@ -21,6 +21,10 @@ Documentation: https://catalogue-imos.aodn.org.au/geonetwork/srv/eng/catalog.sea
 Contact: info@aodn.org.au
 ManagedBy: AODN
 UpdateFrequency: As Needed
+Collabs:
+  ASDI:
+    Tags:
+      - oceans
 Tags:
 - oceans
 - air temperature
