--- a/datasets/cmip6-era5-hybrid-southeast-asia.yaml
+++ b/datasets/cmip6-era5-hybrid-southeast-asia.yaml
@@ -9,6 +9,10 @@ Documentation: https://sgcale.github.io/resource/data/
 Contact: For any questions regarding dataset, email Professor Xiaogang He at hexg@nus.edu.sg.
 ManagedBy: "[PREP-NexT Lab](https://github.com/PREP-NexT)"
 UpdateFrequency: Update when needed.
+Collabs:
+  ASDI:
+    Tags:
+      - climate
 Tags:
   - climate
   - netcdf
