--- a/datasets/ctrees-california-vhr-tree-height.yaml
+++ b/datasets/ctrees-california-vhr-tree-height.yaml
@@ -5,6 +5,10 @@ Documentation: "[Project overview](https://ctrees.org/products/tree-level)"
 Contact: info@ctrees.org
 ManagedBy: "[CTrees](https://ctrees.org/)"
 UpdateFrequency: TBD
+Collabs:
+  ASDI:
+    Tags:
+      - biodiversity
 Tags:
   - aws-pds
   - cog
