--- a/datasets/emearth.yaml
+++ b/datasets/emearth.yaml
@@ -4,6 +4,10 @@ Documentation: https://doi.org/10.20383/102.0547
 Contact: shervan.gharari@usask.ca
 ManagedBy: "[Computational Hydrology at the University of Saskatchewan](https://uofs-comphyd.github.io/)"
 UpdateFrequency: N/A
+Collabs:
+  ASDI:
+    Tags:
+      - climate
 Tags:
   - aws-pds
   - atmosphere
