--- a/datasets/hycom-global-drifters.yaml
+++ b/datasets/hycom-global-drifters.yaml
@@ -4,6 +4,10 @@ Documentation: https://github.com/selipot/hycom-oceantrack
 Contact: https://github.com/selipot/hycom-oceantrack/issues
 ManagedBy: Shane Elipot
 UpdateFrequency: Not updated
+Collabs:
+  ASDI:
+    Tags:
+      - oceans
 Tags:
   - aws-pds
   - drifters
