--- a/datasets/nsf-ncar-era5.yaml
+++ b/datasets/nsf-ncar-era5.yaml
@@ -4,6 +4,10 @@ Documentation: https://doi.org/10.5065/BH6N-5N20
 Contact: rdahelp@ucar.edu
 ManagedBy: "[NSF National Center for Atmospheric Research](https://ncar.ucar.edu/)"
 UpdateFrequency: Monthly, with a 3-4 month lag from realtime
+Collabs:
+  ASDI:
+    Tags:
+      - climate
 Tags:
   - climate
   - model
