--- a/datasets/pohang-canal-dataset.yaml
+++ b/datasets/pohang-canal-dataset.yaml
@@ -4,6 +4,10 @@ Documentation: https://sites.google.com/view/pohang-canal-dataset/home
 Contact: morin-lab@kaist.ac.kr
 ManagedBy: "[MORIN](http://morin.kaist.ac.kr)"
 UpdateFrequency: Not updated
+Collabs:
+  ASDI:
+    Tags:
+      - oceans
 Tags:
   - aws-pds
   - autonomous vehicles
