--- a/datasets/coawst.yaml
+++ b/datasets/coawst.yaml
@@ -5,6 +5,10 @@ Contact: jbzambon@fathomscience.com
 ManagedBy: Fathom Science
 UpdateFrequency: None
 Citation: Warner, J.C., and Kalra, T.S., 2022, Collection of COAWST model forecast for the US East Coast and Gulf of Mexico, U.S. Geological Survey data release, https://doi.org/10.5066/P903KPBJ
+Collabs:
+  ASDI:
+    Tags:
+      - oceans
 Tags:
   - aws-pds
   - oceans
