--- a/datasets/s1-orbits.yaml
+++ b/datasets/s1-orbits.yaml
@@ -14,6 +14,10 @@ Contact: https://asf.alaska.edu/asf/contact-us/
 ManagedBy: "[The Alaska Satellite Facility (ASF)](https://asf.alaska.edu/)"
 UpdateFrequency: >
   Updated as new data becomes available on the [Copernicus Data Space Ecosystem](https://documentation.dataspace.copernicus.eu/Data/ComplementaryData/Additional.html#sentinel-1-orbits). Typically AUX_POEORB files are published daily and AUX_RESORB files are published every other hour.
+Collabs:
+  ASDI:
+    Tags:
+      - disaster
 Tags:
   - auxiliary data
   - disaster response
