bulk tagging ASDI - missing commit files

--- a/datasets/africa-field-boundary-labels.yaml
+++ b/datasets/africa-field-boundary-labels.yaml
@@ -13,6 +13,10 @@ Documentation: Information on the primary dataset can be found [here](https://gi
 Contact: airg@clarku.edu
 ManagedBy: "[The Agricultural Impacts Research Group](https://agroimpacts.info/)"
 UpdateFrequency: "Updated versions of the dataset are added as they are developed"
+Collabs:
+  ASDI:
+    Tags:
+      - agriculture
 Tags:
   - agriculture
   - machine learning
