--- a/datasets/bdsp-teegllteeg.yaml
+++ b/datasets/bdsp-teegllteeg.yaml
@@ -17,19 +17,19 @@ License: "[BDSP Restricted Health Data License 1.0.0](https://bdsp.io/content/hs
 Citation: "Barnett, A. J., Guo, S., Jing, J., Rudin, C., & Westover, M. B. (2025). TEEGLLTEEG: This EEG Looks Like That EEG (version 1.2). Brain Data Science Platform. https://doi.org/10.60508/rd3w-vr51"
 Resources:
   - Description: "EEG segments dataset - 50,697 annotated segments"
-    ARN: "arn:aws:s3:::teegllteeg-eeg-data"  # PLACEHOLDER - doesn't exist
+    ARN: "arn:aws:s3:::teegllteeg-eeg-data"  
     Region: us-east-1
     Type: S3 Bucket
     RequesterPays: false
     Explore:
       - "[Browse Dataset](https://teegllteeg-eeg-data.s3.amazonaws.com/index.html)"
   - Description: "Expert annotations and metadata"
-    ARN: "arn:aws:s3:::teegllteeg-annotations"  # PLACEHOLDER - doesn't exist
+    ARN: "arn:aws:s3:::teegllteeg-annotations"
     Region: us-east-1
     Type: S3 Bucket
     RequesterPays: false
   - Description: "Pre-trained model weights and prototypes"
-    ARN: "arn:aws:s3:::teegllteeg-models"  # PLACEHOLDER - doesn't exist
+    ARN: "arn:aws:s3:::teegllteeg-models"
     Region: us-east-1
     Type: S3 Bucket
     RequesterPays: false
@@ -39,7 +39,7 @@ DataAtWork:
     - Title: "Getting Started with TEEGLLTEEG Dataset"
       URL: https://github.com/bdsp-core/TEEGLLTEEG
       AuthorName: Alina Jade Barnett
-      AuthorURL: https://github.com/bdsp-core
+      AuthorURL: https://bdsp.io
     - Title: "Interpretable EEG Classification with ProtoPMed"
       URL: https://github.com/bdsp-core/TEEGLLTEEG/blob/main/notebooks/tutorial.ipynb
       AuthorName: TEEGLLTEEG Team
@@ -48,7 +48,7 @@ DataAtWork:
     - Title: "TEEGLLTEEG Model Implementation"
       URL: https://github.com/bdsp-core/TEEGLLTEEG
       AuthorName: BDSP Core Team
-      AuthorURL: https://github.com/bdsp-core
+      AuthorURL: https://bdsp.io
   Publications:
     - Title: "Improving Clinician Performance in Classifying EEG Patterns on the Ictal-Interictal Injury Continuum Using Interpretable Machine Learning"
       URL: https://pubmed.ncbi.nlm.nih.gov/38872809/
