--- a/datasets/real-changesets.yaml
+++ b/datasets/real-changesets.yaml
@@ -10,7 +10,7 @@ UpdateFrequency: Minutely
 Collabs:
   ASDI:
     Tags:
-      - disaster
+      - disaster response
 Tags:
   - geospatial
   - osm
