--- a/datasets/asf-event-data.yaml
+++ b/datasets/asf-event-data.yaml
@@ -13,7 +13,7 @@ UpdateFrequency: >
 Collabs:
   ASDI:
     Tags:
-      - disaster
+      - disaster response
 Tags:
   - aws-pds
   - disaster response
