--- a/datasets/global-drought-flood-catalogue.yaml
+++ b/datasets/global-drought-flood-catalogue.yaml
@@ -8,7 +8,7 @@ UpdateFrequency: No future updates planned.
 Collabs:
   ASDI:
     Tags:
-      - disaster
+      - disaster response
 Tags:
   - aws-pds
   - floods
