--- a/datasets/ladi.yaml
+++ b/datasets/ladi.yaml
@@ -8,7 +8,7 @@ License: Creative Commons Attribution 4.0 International (CC BY 4.0)
 Collabs:
   ASDI:
     Tags:
-      - disaster
+      - disaster response
 Tags:
   - aws-pds
   - aerial imagery
