--- a/datasets/openaerialmap.yaml
+++ b/datasets/openaerialmap.yaml
@@ -7,7 +7,7 @@ UpdateFrequency: New imagery is added as soon as it is uploaded by community con
 Collabs:
   ASDI:
     Tags:
-      - disaster
+      - disaster response
 Tags:
   - satellite imagery
   - aerial imagery
