--- a/datasets/palsar-2-scansar-flooding-in-rwanda.yaml
+++ b/datasets/palsar-2-scansar-flooding-in-rwanda.yaml
@@ -8,7 +8,7 @@ Contact: aproject@jaxa.jp
 Collabs:
   ASDI:
     Tags:
-      - disaster
+      - disaster response
 Tags:
   - aws-pds
   - agriculture
