--- a/datasets/s1-orbits.yaml
+++ b/datasets/s1-orbits.yaml
@@ -17,7 +17,7 @@ UpdateFrequency: >
 Collabs:
   ASDI:
     Tags:
-      - disaster
+      - disaster response
 Tags:
   - auxiliary data
   - disaster response
