yaml syntax fix in geo_tide_geojsons.yaml

--- a/datasets/geo_tide_geojsons.yaml
+++ b/datasets/geo_tide_geojsons.yaml
@@ -41,7 +41,7 @@ DataAtWork:
       AuthorName: Danika Eamer, Brilant Kasami, Brooke Bao, and MIT Climate & Sustainability Consortium
       AuthorURL: https://impactclimate.mit.edu
   Publications:
-    - Title: Geospatial Trucking Industry Decarbonization Explorer (Geo-TIDE): Technical Guide and Methodology
+    - Title: "Geospatial Trucking Industry Decarbonization Explorer (Geo-TIDE): Technical Guide and Methodology"
       URL: https://dspace.mit.edu/handle/1721.1/159069
       AuthorName: Eamer, D., Borrero, M., Bao, B., Kasami, B., and De Figueiredo Valente, H.
       AuthorURL: https://impactclimate.mit.edu
