--- a/datasets/geo_tide_geojsons.yaml
+++ b/datasets/geo_tide_geojsons.yaml
@@ -5,12 +5,14 @@ Contact: mcsc@mit.edu
 ManagedBy: MIT Climate & Sustainability Consortium
 UpdateFrequency: Quarterly
 Tags:
-  - Fleet Transition
-  - Decision Support
-  - Decarbonization
-  - Geospatial
-  - Trucking
-  - Alternative energy
+  - electricity
+  - energy
+  - environmental
+  - geospatial
+  - supply chain
+  - sustainability
+  - transportation
+  - 
 License: Creative Commons Attribution 4.0 International
 Citation: "Eamer, D., Borrero, M., Bashir, N., & MIT Climate & Sustainability Consortium. (2025). GeoJSON files for the MCSC's Trucking Industry Decarbonization Explorer (Geo-TIDE) [Data set]. Zenodo. https://doi.org/10.5281/zenodo.15851359"
 Resources:
