Rename loc-sanborn to loc-sanborn-maps since bucket name was unavailable

--- a/datasets/loc-sanborn-maps.yaml
+++ b/datasets/loc-sanborn-maps.yaml
@@ -36,17 +36,17 @@ License: The content of the Library of Congress online Sanborn Maps Collection
   https://www.loc.gov/collections/sanborn-maps/about-this-collection/rights-and-access/.
 Resources:
   - Description: Sanborn Maps data
-    ARN: arn:aws:s3:::loc-sanborn
-    Region: us-east-1
+    ARN: arn:aws:s3:::loc-sanborn-maps
+    Region: us-west-2
     Type: S3 Bucket
     Explore:
       - "[Browse Bucket by
-        State](https://loc-sanborn.s3.amazonaws.com/maps-by-state/index.html)"
-      - "[README](https://loc-sanborn.s3.amazonaws.com/README.html)"
+        State](https://loc-sanborn-maps.s3.amazonaws.com/maps-by-state/index.html)"
+      - "[README](https://loc-sanborn-maps.s3.amazonaws.com/README.html)"
 DataAtWork:
   Tutorials:
     - Title: README data cover sheet
-      URL: https://loc-sanborn.s3.amazonaws.com/README.html
+      URL: https://loc-sanborn-maps.s3.amazonaws.com/README.html
       AuthorName: Library of Congress
     - Title: Sanborn Map Data Python Tutorial (Jupyter notebook)
       URL: https://libraryofcongress.github.io/data-exploration/Data%20Packages/sanborn.html
