make suggested changes

--- a/datasets/busco-data.yaml
+++ b/datasets/busco-data.yaml
@@ -9,6 +9,7 @@ Tags:
   - bacteria
   - bioinformatics
   - genomic
+  - life sciences
   - metagenomics
   - open source software
   - protein
@@ -35,7 +36,7 @@ DataAtWork:
       AuthorName:
       AuthorURL:
   Publications:
-    - Title: OrthoDB and BUSCO update: annotation of orthologs with wider sampling of genomes
+    - Title: OrthoDB and BUSCO update - annotation of orthologs with wider sampling of genomes
       URL: https://academic.oup.com/nar/article/53/D1/D516/7899526?login=true
       AuthorName: Fredrik Tegenfeldt, Dmitry Kuznetsov, Mosè Manni, Matthew Berkeley, Evgeny M Zdobnov, Evgenia V Kriventseva
     - Title: BUSCO Update: Novel and Streamlined Workflows along with Broader and Deeper Phylogenetic Coverage for Scoring of Eukaryotic, Prokaryotic, and Viral Genomes
