--- a/datasets/bossdb.yaml
+++ b/datasets/bossdb.yaml
@@ -18,7 +18,7 @@ Tags:
   - light-sheet microscopy
   - calcium imaging
   - volumetric imaging
-License: Creative Commons 4.0 International (CC BY 4.0); Creative Commons CC0 1.0 Universal (CC0-1.0)
+License: Creative Commons 4.0 International (CC BY 4.0); Creative Commons CC0 1.0 Universal (CC0-1.0); Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International (CC BY-NC-SA 4.0)
 Resources:
   - Description: Large 3D volumes of neuroimaging data and image processing products such as segmentation and reconstructed meshes
     ARN: arn:aws:s3:::bossdb-open-data
