--- a/datasets/geo_tide_geojsons.yaml
+++ b/datasets/geo_tide_geojsons.yaml
@@ -17,7 +17,7 @@ Citation: "Eamer, D., Borrero, M., Bashir, N., & MIT Climate & Sustainability Co
 Resources:
   - Description: GeoJSON Files for Geo-TIDE
     ARN: arn:aws:s3:::mcsc-datahub-public/geojsons_simplified/
-    Region: US West (Oregon) us-west-2
+    Region: us-west-2
     Type: S3 Bucket
 DataAtWork:
   Tutorials:
