--- a/datasets/mbers-open-data.yaml
+++ b/datasets/mbers-open-data.yaml
@@ -4,7 +4,8 @@ Documentation: https://github.com/WattTime/mbers-open-data/blob/main/MBER_Data_S
 Contact: The annual and hourly MBERs data are created and maintained by the Climate TRACE coalition of nonprofits, universities, and tech companies. The largest contributors to the coalition's electricity sector work are WattTime, Transition Zero, Global Energy Monitor, Pixel Scientia Labs, Planet Labs, and Georgetown University. For questions or more information about MBER data, contact coalition@ClimateTRACE.org or visit https://climatetrace.org/contact.
 ManagedBy: Climate TRACE
 UpdateFrequency: Annually
-Tags: 
+Tags:
+  - aws-pds
   - carbon
   - climate
   - csv
