--- a/datasets/geo_tide_geojsons.yaml
+++ b/datasets/geo_tide_geojsons.yaml
@@ -4,7 +4,12 @@ Documentation: https://github.com/mcsc-impact-climate/Geo-TIDE-datasets
 Contact: mcsc@mit.edu
 ManagedBy: MIT Climate & Sustainability Consortium
 UpdateFrequency: Quarterly
+Collabs:
+  ASDI:
+    Tags:
+      - sustainability
 Tags:
+  - aws-pds
   - electricity
   - energy
   - environmental
