Added "Browse Bucket" link

--- a/datasets/geo_tide_geojsons.yaml
+++ b/datasets/geo_tide_geojsons.yaml
@@ -24,6 +24,8 @@ Resources:
     ARN: arn:aws:s3:::mcsc-geotide-geojson-files/geojson_files/
     Region: us-west-2
     Type: S3 Bucket
+    Explore:
+      - '[Browse Bucket](https://mcsc-geotide-geojson-files.s3.amazonaws.com/index.html)'
 DataAtWork:
   Tutorials:
     - Title: Geo-TIDE access and getting-started exercises
