Add tags for CartoStore

--- a/datasets/cartostore.yaml
+++ b/datasets/cartostore.yaml
@@ -8,8 +8,8 @@ UpdateFrequency: Monthly
 Tags:
   - spatial transcriptomics
   - spatial omics
-  - genomics
-  - PMTiles
+  - genomic
+  - bioinformatics
   - geospatial
 License: |
   "[CC BY-NC-SA 4.0](https://creativecommons.org/licenses/by-nc-sa/4.0/)"
@@ -27,7 +27,7 @@ DataAtWork:
       URL: https://github.com/seqscope/cartostore/blob/main/README.md
       AuthorName: Hyun Min Kang and Weiqiu Cheng
     - Title: Cartloader Documentation
-      URL: https://seqscope.github.io/cartloader/
+      URL: https://seqscope.github.io/cartloader
       AuthorName: Hyun Min Kang and Weiqiu Cheng
   Example Datasets:
     - Title : Example CartoStore Repository for Xenium Breast Cancer Dataset
