--- a/tags.yaml
+++ b/tags.yaml
@@ -392,6 +392,8 @@
 - space biology
 - space weather
 - SPARQL
+- spatial omics
+- spatial transcriptomics
 - speaker identification
 - speech processing
 - speech recognition
