--- a/datasets/cartostore.yaml
+++ b/datasets/cartostore.yaml
@@ -10,7 +10,7 @@ Tags:
   - spatial omics
   - genomic
   - bioinformatics
-  - geospatial
+  - life sciences
 License: |
   "[CC BY-NC-SA 4.0](https://creativecommons.org/licenses/by-nc-sa/4.0/)"
 Citation: |
