--- a/datasets/eai-essential-web-v1.yaml
+++ b/datasets/eai-essential-web-v1.yaml
@@ -1,4 +1,4 @@
-Name: Essential-Web v1.0: 24T tokens of organized web data
+Name: "Essential-Web v1.0: 24T tokens of organized web data"
 Description: A 24-trillion-token dataset in which every document is annotated with a twelve-category taxonomy covering topic, format, content complexity, and quality.
 Documentation: https://huggingface.co/datasets/EssentialAI/essential-web-v1.0
 Contact: research@essential.ai
