--- a/datasets/eai-essential-web-v1.yaml
+++ b/datasets/eai-essential-web-v1.yaml
@@ -1,4 +1,4 @@
-Name: "Essential-Web v1.0: 24T tokens of organized web data"
+Name: 'Essential-Web v1.0: 24T tokens of organized web data'
 Description: A 24-trillion-token dataset in which every document is annotated with a twelve-category taxonomy covering topic, format, content complexity, and quality.
 Documentation: https://huggingface.co/datasets/EssentialAI/essential-web-v1.0
 Contact: research@essential.ai
@@ -12,7 +12,7 @@ Tags:
   - text
 License: 'Essential-Web-v1.0 contributions are made available under the [ODC attribution license](https://opendatacommons.org/licenses/by/odc_by_1.0_public_text.txt); however, users should also abide by the [Common Crawl - Terms of Use](https://commoncrawl.org/terms-of-use). We do not alter the license of any of the underlying data.'
 Resources:
-  - Description: Essential-Web v1.0: 24T tokens of organized web data
+  - Description: 'Essential-Web v1.0: 24T tokens of organized web data'
     ARN: # TODO: fill in 
     Region: # TODO: fill in
     Type: S3 Bucket
