--- a/datasets/saag_aws_yaml.yaml
+++ b/datasets/saag_aws_yaml.yaml
@@ -5,6 +5,7 @@ Contact:  rdahelp@ucar.edu, Erin Dougherty, doughert@ucar.edu; Andy Newman, anew
 ManagedBy: "[National Center for Atmospheric Research](https://ncar.ucar.edu/)"
 UpdateFrequency: Rare. This dataset is unlikely to be updated unless there are file problems discovered in the AWS copy.
 Tags:
+  - aws-pds
   - climate
   - model
   - climate model
