--- a/datasets/nrel-pds-wtk.yaml
+++ b/datasets/nrel-pds-wtk.yaml
@@ -230,6 +230,12 @@ Resources:
     Type: S3 Bucket
     Explore:
     - '[Browse Dataset](https://data.openei.org/s3_viewer?bucket=nrel-pds-wtk&prefix=wtk-led%2F)'
+  - Description: Super-Resolution for Renewable Energy Resource Data with Wind from Reanalysis (Sup3rWind)
+    ARN: arn:aws:s3:::nrel-pds-wtk/sup3rwind/
+    Region: us-west-2
+    Type: S3 Bucket
+    Explore:
+    - '[Browse Dataset](https://data.openei.org/s3_viewer?bucket=nrel-pds-wtk&prefix=sup3rwind%2F)'
 DataAtWork:
   Tutorials:
     - Title: HSDS Examples
