Use tags in tags.yaml

--- a/datasets/carbonpdf.yaml
+++ b/datasets/carbonpdf.yaml
@@ -5,10 +5,11 @@ Contact: kaz81@pitt.edu
 ManagedBy: Pittcps lab
 UpdateFrequency: Data for a new company is added once collected.
 Tags:
-  - product carbon footprint
-  - question answering
-  - pdf
-  - sustainability
+  - environmental
+  - product comparison
+  - csv
+  - information retrieval
+  - industry
 License:  CC BY 4.0 (https://creativecommons.org/licenses/by/4.0/)
 Resources:
   - Description: A component-level product carbon footprint dataset and a corresponding question-answering dataset based on it
