--- a/datasets/loc-sanborn-maps.yaml
+++ b/datasets/loc-sanborn-maps.yaml
@@ -16,6 +16,7 @@ Contact: For curatorial questions about the content of the collection and
 ManagedBy: "[Library of Congress](https://www.loc.gov/)"
 UpdateFrequency: As new and significant changes to the underlying digital collection occurs
 Tags:
+  - aws-pds
   - archives
   - cities
   - computer vision
