--- a/datasets/carbonpdf.yaml
+++ b/datasets/carbonpdf.yaml
@@ -5,6 +5,7 @@ Contact: kaz81@pitt.edu
 ManagedBy: Pittcps lab
 UpdateFrequency: Data for a new company is added once collected.
 Tags:
+  - aws-pds
   - environmental
   - product comparison
   - csv
@@ -16,8 +17,7 @@ Resources:
     ARN: arn:aws:s3:::carbonpdf
     Region: us-east-1
     Type: S3 Bucket
-    Explore: https://github.com/pittcps/carbonpdf-dataset
-DeprecatedNotice:
+    Explore: 'https://github.com/pittcps/carbonpdf-dataset'
 ADXCategories:
   - Environmental Data
   - Manufacturing Data
