--- a/datasets/carbonpdf.yaml
+++ b/datasets/carbonpdf.yaml
@@ -17,7 +17,8 @@ Resources:
     ARN: arn:aws:s3:::carbonpdf
     Region: us-east-1
     Type: S3 Bucket
-    Explore: 'https://github.com/pittcps/carbonpdf-dataset'
+    Explore:
+    - '[Explore](https://github.com/pittcps/carbonpdf-dataset)'
 ADXCategories:
   - Environmental Data
   - Manufacturing Data
