--- a/datasets/carbonpdf.yaml
+++ b/datasets/carbonpdf.yaml
@@ -4,6 +4,10 @@ Documentation: https://github.com/pittcps/carbonpdf-dataset
 Contact: kaz81@pitt.edu
 ManagedBy: Pittcps lab
 UpdateFrequency: Data for a new company is added once collected.
+Collabs:
+  ASDI:
+    Tags:
+      - climate
 Tags:
   - aws-pds
   - environmental
