--- a/datasets/aws-public-blockchain.yaml
+++ b/datasets/aws-public-blockchain.yaml
@@ -43,10 +43,10 @@ Resources:
 
 DataAtWork:
   Publications:
-    - Title: Exploring Arbitrum Data: Analyze L2 Activity with AWS Public Blockchain Datasets
+    - Title: "Exploring Arbitrum Data: Analyze L2 Activity with AWS Public Blockchain Datasets"
       URL: https://repost.aws/articles/ARpnBONglsT2e6D-hZZmxVvA/exploring-arbitrum-data-analyze-l2-activity-with-aws-public-blockchain-datasets
       AuthorName: Simon Goldberd, Everton Fraga
-   - Title: Unlocking XRP Ledger Data: Comprehensive Analysis with AWS Public Blockchain Datasets
+    - Title: "Unlocking XRP Ledger Data: Comprehensive Analysis with AWS Public Blockchain Datasets"
       URL: https://repost.aws/articles/ARg_zMIXlhTG2hSDFZDfF6hQ/unlocking-xrp-ledger-data-comprehensive-analysis-with-aws-public-blockchain-datasets
       AuthorName: Simon Goldberd, Everton Fraga
     - Title: New datasets added to the AWS Public Blockchain Datasets — available for analytics and research
