Corrected a typo, updated the file types

--- a/datasets/cartostore.yaml
+++ b/datasets/cartostore.yaml
@@ -17,8 +17,8 @@ Citation: |
   CartoStore by Hyun Min Kang's lab at the University of Michigan School of Public Health.
   Provided by Kang lab and accessed [DAY MONTH YEAR].
 Resources:
-  - Description: Parquet and Shapefiles
-    ARN: arn:aws:s3:::carostore
+  - Description: PMTile, YAML, JSON, and TSV files
+    ARN: arn:aws:s3:::cartostore
     Region: us-east-1
     Type: S3 Bucket
 DataAtWork:
