--- a/datasets/proteingym.yaml
+++ b/datasets/proteingym.yaml
@@ -44,7 +44,7 @@ DataAtWork:
   Publications:
     - Title: ProteinGym: Large-Scale Benchmarks for Protein Fitness Prediction and Design
       URL: https://papers.nips.cc/paper_files/paper/2023/hash/cac723e5ff29f65e3fcbb0739ae91bee-Abstract-Datasets_and_Benchmarks.html
-      AuthorName: Pascal Notin, Aaron Kollasch, Daniel Ritter, Lood van Niekerk, Steffanie Paul, Han Spinner, Nathan Rollins, Ada Shaw, Rose Orenbuch, Ruben Weitzman, Jonathan Frazer, Mafalda Dias, Dinko Franceschi, Yarin Gal, Debora Marks
+      AuthorName: "Pascal Notin, et al."
       AuthorURL: https://www.pascalnotin.com/
 DeprecatedNotice: 
 ADXCategories:
