--- a/datasets/proteingym.yaml
+++ b/datasets/proteingym.yaml
@@ -43,7 +43,7 @@ DataAtWork:
       URL: https://proteingym.org/
       AuthorName: Pascal Notin & Daniel Ritter
   Publications:
-    - Title: ProteinGym: Large-Scale Benchmarks for Protein Fitness Prediction and Design
+    - Title: "ProteinGym: Large-Scale Benchmarks for Protein Fitness Prediction and Design"
       URL: https://papers.nips.cc/paper_files/paper/2023/hash/cac723e5ff29f65e3fcbb0739ae91bee-Abstract-Datasets_and_Benchmarks.html
       AuthorName: "Pascal Notin, et al."
       AuthorURL: https://www.pascalnotin.com/
